--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^2.9.0",
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
+    "node-mkdirs": "0.0.1",
     "phantom": "^4.0.3",
     "promise": "^7.1.1",
     "qiniu": "^6.1.13",
